[gd_scene load_steps=2 format=3 uid="uid://do6r6seeqg7h3"]

[ext_resource type="Script" uid="uid://sch2m5sw7i3s" path="res://scenes/ui/dungeon/end_screen/end_screen.gd" id="1_1ad5n"]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1ad5n")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NameLbl" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"

[node name="HomeBtn" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Home"

[node name="RestartBtn" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HomeBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/RestartBtn" to="." method="_on_quit_btn_pressed"]
